--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Domine:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ysabeau:wght@700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="Photos/knowmore logo.png">
     <title>knowmore</title>
 </head>
 <body>
